--- a/homepage.ipynb
+++ b/homepage.ipynb
@@ -2,28 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from PyQt5 import QtCore, QtGui, QtWidgets,uic,Qt\n",
+    "from PyQt5.QtWidgets import QLayout, QSizePolicy,QApplication, QWidget, QListWidget, QVBoxLayout, QLabel, QPushButton, QListWidgetItem, QHBoxLayout\n",
+    "import pymongo\n",
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('5caaef822420f204785ebe05'), 'uploaded_by': ObjectId('5caaea5248d40202765a0a8b'), 'full_description': 'fdslkjf jj fkds jf lksdjff jdslkf jsdlkf jdsf kldsjf lkdsjfk ldsjf kdsjf ldsjflkds jfdslkf jds lkfjdslkfdsjflkdsjflkds jfdslk fjdslkfjds lkfds jflkf jlkdsjfkdlfjsalkdsa jflkf jsalkfsa', 'category': 'Medical', 'short_description': 'dhsajkhdsakjhdsakjdhsakjdsa', 'data_location': 'C://Documents/Something/something/dada.csv', 'data_size': '5 GB', 'status': 'For Sale', 'cost': '150000', 'uploaded_on_date_time': datetime.datetime(2019, 4, 8, 11, 51, 46, 744000)}\n"
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "# coding: utf-8\n",
+    "item_list =list()\n",
     "\n",
-    "# In[1]:\n",
-    "\n",
-    "\n",
-    "import sys\n",
-    "from PyQt5 import QtCore, QtGui, QtWidgets,uic,Qt\n",
-    "from PyQt5.QtWidgets import QLayout, QSizePolicy,QApplication, QWidget, QListWidget, QVBoxLayout, QLabel, QPushButton, QListWidgetItem,     QHBoxLayout\n",
-    "import pymongo\n",
     "\n",
     "data_client = pymongo.MongoClient(\"mongodb://localhost/\")\n",
     "ds_db = data_client[\"dataseed_db\"]\n",
@@ -32,25 +43,52 @@
     "# curr_datasets = ds_datasets.find_many()\n",
     "\n",
     "for x in ds_datasets.find():\n",
-    "    print(x)\n",
+    "    print(type(x))\n",
+    "    item_list.append(x)\n",
     "\n",
-    "curr_user = ds_user.find_one()\n",
+    "curr_user = ds_user.find_one()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "check\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2971: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "qtCreatorFile = \"homepage.ui\" # Enter file here.\n",
+    "\n",
+    "Ui_MainWindow, QtBaseClass = uic.loadUiType(qtCreatorFile)\n",
     "\n",
     "\n",
-    "# In[2]:\n",
     "\n",
+    "filterItem = ['All item','Medical','Movies','General']\n",
     "\n",
-    "# qtCreatorFile = \"homepage.ui\" # Enter file here.\n",
-    "\n",
-    "# Ui_MainWindow, QtBaseClass = uic.loadUiType(qtCreatorFile)\n",
-    "\n",
-    "\n",
-    "# # In[3]:\n",
-    "\n",
-    "\n",
-    "# ItemList = ['Movie Data','Stock Data','Phone Data']\n",
-    "# filterItem = ['Date','Name']\n",
-    "# import datetime\n",
     "\n",
     "# dummy_dataset = [{\n",
     "#     \"uploaded_by\": 123, \n",
@@ -64,92 +102,122 @@
     "#     \"uploaded_on_date_time\":datetime.datetime.now()}]\n",
     "\n",
     "\n",
-    "# strr=''\n",
-    "# for item in dummy_dataset:\n",
-    "#     for key,value in item.items():\n",
-    "#         strr += key + ' ' + str(value) + '\\n'\n",
-    "\n",
-    "# print(strr)\n",
-    "# #ItemList.append(strr)\n",
-    "# dummy_dataset[0]['cost']\n",
-    "\n",
-    "\n",
-    "# # In[4]:\n",
     "\n",
     "\n",
     "\n",
-    "# class MyApp(QtWidgets.QMainWindow, Ui_MainWindow):\n",
-    "#     def __init__(self):\n",
-    "#         QtWidgets.QMainWindow.__init__(self)\n",
-    "#         Ui_MainWindow.__init__(self)\n",
-    "#         self.setupUi(self)\n",
-    "#         self.clickme.clicked.connect(self.CalculateTax)\n",
-    "#         self.searchBox.setText('serch me')\n",
-    "# #         self.ItemListView.addItems(ItemList)\n",
-    "#         self.filterBox.addItems(filterItem)\n",
-    "#         self.filterBox.currentIndexChanged.connect(self.selectionchange)\n",
-    "# #         self.label.setText('DataSeed-Homepage')\n",
-    "# #         self.ItemListView.setStyleSheet( \"QListWidget::item {margin-bottom:10px}\")\n",
-    "#         self.renderList()\n",
+    "original_list_item = item_list.copy()\n",
     "\n",
-    "        \n",
-    "#     def CalculateTax(self):\n",
-    "#         print('check')\n",
-    "        \n",
-    "#     def renderList(self):\n",
-    "#         for i in range(0,10):\n",
-    "#             self.renderListItem(i)\n",
+    "\n",
+    "class MyApp(QtWidgets.QMainWindow, Ui_MainWindow):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        QtWidgets.QMainWindow.__init__(self)\n",
+    "        Ui_MainWindow.__init__(self)\n",
+    "        self.setupUi(self)\n",
+    "        self.clickme.clicked.connect(self.searchItem)\n",
+    "        self.searchBox.setText('enter search query')\n",
+    "#         self.ItemListView.addItems(ItemList)\n",
+    "        self.filterBox.addItems(filterItem)\n",
+    "        self.filterBox.currentIndexChanged.connect(self.selectionchange)\n",
+    "#         self.label.setText('DataSeed-Homepage')\n",
+    "#         self.ItemListView.setStyleSheet( \"QListWidget::item {margin-bottom:10px}\")\n",
+    "        self.renderList()\n",
     "        \n",
     "\n",
-    "#     def renderListItem(self,i):\n",
-    "#             layout = QHBoxLayout()\n",
-    "#             layout.setSizeConstraint(QLayout.SetMinimumSize);\n",
-    "            \n",
-    "#             item = QListWidgetItem(self.ItemListView)\n",
-    "#             label = QLabel(str(i+1)+ \") \" + dummy_dataset[0]['short_description'] + \"\\n\" + \"Uploaded By: \" + str(dummy_dataset[0]['uploaded_by']))\n",
-    "#             label.setStyleSheet(\"height:fit-content;font-size:12pt;font-style: normal;font-weight:100;\");\n",
-    "#           #  label.setSizePolicy(QSizePolicy.Preferred, QSizePolicy.Minimum)\n",
-    "#             label.setWordWrap(True);\n",
-    "            \n",
-    "#             label2 = QLabel(\"Data Size: \" + dummy_dataset[0]['data_size'] + '\\nStatus: ' + dummy_dataset[0]['status'])\n",
-    "#             label2.setStyleSheet(\"height:fit-content;font-size:12pt;text-align:right;\");\n",
-    "# #             label2.setStyleSheet(\"color: white; background: red;,text-align:right;\");\n",
-    "#             label2.setAlignment(QtCore.Qt.AlignCenter)\n",
-    "# #             label2.setSizePolicy(QSizePolicy.Minimum, QSizePolicy.Ignored)\n",
-    "#           #  label2.setSizePolicy(QSizePolicy.Preferred, QSizePolicy.Minimum)\n",
+    "    def Search_Query(self,query):\n",
+    "        search_list =[]\n",
+    "        search_query = query\n",
+    "        global item_list\n",
+    "        for x in item_list:\n",
+    "            temp = list(x.values())\n",
+    "            for y in temp:\n",
+    "#                 print(y)\n",
+    "                try:\n",
+    "                    if search_query in y:\n",
+    "                        search_list.append(x)\n",
+    "#                         print('breaking after \\n',x)\n",
+    "                        break\n",
+    "                except:\n",
+    "                    pass\n",
     "\n",
-    "#             label2.setWordWrap(True)\n",
+    "        search_list\n",
+    "        item_list=[]\n",
+    "        item_list = search_list.copy()\n",
+    "\n",
+    "    \n",
+    "    def searchItem(self):\n",
+    "        global original_list_item\n",
+    "        global item_list\n",
+    "        item_list = original_list_item.copy()\n",
+    "        print('check')\n",
+    "        query = self.searchBox.text()\n",
+    "        self.Search_Query(query)\n",
+    "        self.renderList()\n",
+    "        \n",
+    "    def renderList(self):\n",
+    "        self.ItemListView.clear()\n",
+    "        for i in range(0,len(item_list)):\n",
+    "            self.renderListItem(i)\n",
+    "        \n",
+    "\n",
+    "    def renderListItem(self,i):\n",
+    "            layout = QHBoxLayout()\n",
+    "            layout.setSizeConstraint(QLayout.SetMinimumSize);\n",
+    "            \n",
+    "            item = QListWidgetItem(self.ItemListView)\n",
+    "            label = QLabel(str(i+1)+ \") \" + item_list[i]['short_description'] + \"\\n\" + \"Uploaded By: \" + str(item_list[i]['uploaded_by']))\n",
+    "            label.setStyleSheet(\"height:fit-content;font-size:12pt;font-style: normal;font-weight:100;\");\n",
+    "          #  label.setSizePolicy(QSizePolicy.Preferred, QSizePolicy.Minimum)\n",
+    "            label.setWordWrap(True);\n",
+    "            \n",
+    "            label2 = QLabel(\"Data Size: \" + item_list[i]['data_size'] + '\\nStatus: ' + item_list[i]['status'])\n",
+    "            label2.setStyleSheet(\"height:fit-content;font-size:12pt;text-align:right;\");\n",
+    "#             label2.setStyleSheet(\"color: white; background: red;,text-align:right;\");\n",
+    "            label2.setAlignment(QtCore.Qt.AlignCenter)\n",
+    "#             label2.setSizePolicy(QSizePolicy.Minimum, QSizePolicy.Ignored)\n",
+    "          #  label2.setSizePolicy(QSizePolicy.Preferred, QSizePolicy.Minimum)\n",
+    "\n",
+    "            label2.setWordWrap(True)\n",
     "\n",
     "            \n",
     "\n",
-    "#             layout.addWidget(label)\n",
-    "#             layout.addWidget(label2)\n",
+    "            layout.addWidget(label)\n",
+    "            layout.addWidget(label2)\n",
     "            \n",
-    "#             widget = QWidget()\n",
-    "#             widget.setStyleSheet(\"height:fit-content;,width:'100%'\");\n",
-    "#             widget.setLayout(layout);\n",
+    "            widget = QWidget()\n",
+    "            widget.setStyleSheet(\"height:fit-content;,width:100%\");\n",
+    "            widget.setLayout(layout);\n",
     "            \n",
-    "#             item.setSizeHint(layout.sizeHint())\n",
+    "            item.setSizeHint(layout.sizeHint())\n",
     "            \n",
-    "#             self.ItemListView.addItem(item)\n",
-    "#             self.ItemListView.setItemWidget(item,widget)\n",
+    "            self.ItemListView.addItem(item)\n",
+    "            self.ItemListView.setItemWidget(item,widget)\n",
     "        \n",
     "        \n",
-    "# #         strr=''\n",
-    "# #         for i in range(0,3):\n",
-    "# #             for item in dummy_dataset:\n",
-    "# #                 for key,value in item.items():\n",
-    "# #                     strr += key + ' ' + str(value) + '\\n'\n",
+    "#         strr=''\n",
+    "#         for i in range(0,3):\n",
+    "#             for item in dummy_dataset:\n",
+    "#                 for key,value in item.items():\n",
+    "#                     strr += key + ' ' + str(value) + '\\n'\n",
     "    \n",
     "        \n",
-    "#     def selectionchange(self,i):\n",
-    "#         self.searchBox.setText(self.filterBox.currentText())\n",
+    "    def selectionchange(self,i):\n",
+    "        global original_list_item\n",
+    "        global item_list\n",
+    "        strr = self.filterBox.currentText()\n",
+    "#         print(strr)\n",
+    "        item_list = original_list_item.copy()\n",
+    "        if strr != \"All item\":\n",
+    "            self.Search_Query(strr)\n",
     "        \n",
-    "# if __name__ == \"__main__\":\n",
-    "#     app = QtWidgets.QApplication(sys.argv)\n",
-    "#     window = MyApp()\n",
-    "#     window.show()\n",
-    "#     sys.exit(app.exec_())\n",
+    "        self.renderList()\n",
+    "        \n",
+    "if __name__ == \"__main__\":\n",
+    "    x=12\n",
+    "    app = QtWidgets.QApplication(sys.argv)\n",
+    "    window = MyApp()\n",
+    "    window.show()\n",
+    "    sys.exit(app.exec_())\n",
     "\n"
    ]
   }
