purhcase data window left but data is here

--- a/homepage.ipynb
+++ b/homepage.ipynb
@@ -27,6 +27,7 @@
       "<class 'dict'>\n",
       "<class 'dict'>\n",
       "<class 'dict'>\n",
+      "<class 'dict'>\n",
       "<class 'dict'>\n"
      ]
     }
@@ -53,29 +54,34 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "qtCreatorFile_pur = \"purchase_window.ui\" # Enter file here.\n",
+    "\n",
+    "Ui_MainWindow_pur, QtBaseClass = uic.loadUiType(qtCreatorFile_pur)\n",
+    "\n",
+    "class PurchaseWindow(QtWidgets.QMainWindow, Ui_MainWindow_pur):\n",
+    "    def __init__(self):\n",
+    "        QtWidgets.QMainWindow.__init__(self)\n",
+    "        Ui_MainWindow.__init__(self)\n",
+    "        self.setupUi(self)\n",
+    "#         self.purchase_btn.clicked.connect(self.CalculateTax)\n",
+    "#         self.sell_btn.clicked.connect(self.CalculateTax2)\n",
+    "     \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "check\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2971: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "item clicked:  <PyQt5.QtWidgets.QListWidgetItem object at 0x0000027BAC4161F8>\n",
+      "{'_id': ObjectId('5ccbeaa82420f20c983715a8'), 'uploaded_by': ObjectId('5caaea5248d40202765a0a8b'), 'full_description': 'xrayxrayxuefsaiufnh\\t', 'category': 'General', 'short_description': 'this is new data of xray\\t', 'data_location': 'chal by', 'data_size': '5 GB', 'status': 'For Sale', 'cost': '20000', 'uploaded_on_date_time': datetime.datetime(2019, 5, 3, 12, 15, 52, 186000)}\n"
      ]
     }
    ],
@@ -122,8 +128,32 @@
     "#         self.label.setText('DataSeed-Homepage')\n",
     "#         self.ItemListView.setStyleSheet( \"QListWidget::item {margin-bottom:10px}\")\n",
     "        self.renderList()\n",
+    "        self.ItemListView.itemDoubleClicked.connect(self.itemclicked)\n",
+    "        self.purchase_window = uic.loadUi(\"purchase_window.ui\")\n",
     "        \n",
-    "\n",
+    "    def itemclicked(self,iteem):\n",
+    "        print(\"item clicked: \",iteem)\n",
+    "        \n",
+    "        i=0;\n",
+    "        while i<len(item_list):\n",
+    "            if(self.ItemListView.item(i)== iteem):\n",
+    "                break\n",
+    "            i=i+1\n",
+    "        \n",
+    "        self.PurchaseWindowOpen(i)\n",
+    "#         mainpg.hide()\n",
+    "#         pg1.show()\n",
+    "#         pg1.requestButton.hide()\n",
+    "#         pg1.Ltitle.setText(\"Saad DB se \"+str(i)+\"th entry ka show kara do\")\n",
+    "    def PurchaseWindowOpen(self,item_index):\n",
+    "        \n",
+    "        print(item_list[item_index])\n",
+    "        self.purchase_window.show()\n",
+    "        self.purchase_window.label1.setText(item_list[item_index]['short_description'])\n",
+    "        self.purchase_window.label2.setText(item_list[item_index]['cost'])\n",
+    "       \n",
+    "        \n",
+    "        \n",
     "    def Search_Query(self,query):\n",
     "        search_list =[]\n",
     "        search_query = query\n",
@@ -220,6 +250,13 @@
     "    sys.exit(app.exec_())\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
