--- a/homepage.ipynb
+++ b/homepage.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,6 +82,23 @@
      "text": [
       "item clicked:  <PyQt5.QtWidgets.QListWidgetItem object at 0x0000027BAC4161F8>\n",
       "{'_id': ObjectId('5ccbeaa82420f20c983715a8'), 'uploaded_by': ObjectId('5caaea5248d40202765a0a8b'), 'full_description': 'xrayxrayxuefsaiufnh\\t', 'category': 'General', 'short_description': 'this is new data of xray\\t', 'data_location': 'chal by', 'data_size': '5 GB', 'status': 'For Sale', 'cost': '20000', 'uploaded_on_date_time': datetime.datetime(2019, 5, 3, 12, 15, 52, 186000)}\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2971: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
