tab + enter + rating done

--- a/homepage.ipynb
+++ b/homepage.ipynb
@@ -80,8 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "item clicked:  <PyQt5.QtWidgets.QListWidgetItem object at 0x0000027BAC4161F8>\n",
-      "{'_id': ObjectId('5ccbeaa82420f20c983715a8'), 'uploaded_by': ObjectId('5caaea5248d40202765a0a8b'), 'full_description': 'xrayxrayxuefsaiufnh\\t', 'category': 'General', 'short_description': 'this is new data of xray\\t', 'data_location': 'chal by', 'data_size': '5 GB', 'status': 'For Sale', 'cost': '20000', 'uploaded_on_date_time': datetime.datetime(2019, 5, 3, 12, 15, 52, 186000)}\n"
+      "check\n"
      ]
     },
     {
@@ -138,7 +137,7 @@
     "        Ui_MainWindow.__init__(self)\n",
     "        self.setupUi(self)\n",
     "        self.clickme.clicked.connect(self.searchItem)\n",
-    "        self.searchBox.setText('enter search query')\n",
+    "        self.searchBox.setText('')\n",
     "#         self.ItemListView.addItems(ItemList)\n",
     "        self.filterBox.addItems(filterItem)\n",
     "        self.filterBox.currentIndexChanged.connect(self.selectionchange)\n",
@@ -147,6 +146,7 @@
     "        self.renderList()\n",
     "        self.ItemListView.itemDoubleClicked.connect(self.itemclicked)\n",
     "        self.purchase_window = uic.loadUi(\"purchase_window.ui\")\n",
+    "        self.searchBox.returnPressed.connect(self.clickme.click)\n",
     "        \n",
     "    def itemclicked(self,iteem):\n",
     "        print(\"item clicked: \",iteem)\n",
@@ -190,6 +190,7 @@
     "        search_list\n",
     "        item_list=[]\n",
     "        item_list = search_list.copy()\n",
+    "        self.SearchresultLabel.setText(str(len(search_list)) + \" result(s) found\")\n",
     "\n",
     "    \n",
     "    def searchItem(self):\n",
@@ -212,7 +213,7 @@
     "            layout.setSizeConstraint(QLayout.SetMinimumSize);\n",
     "            \n",
     "            item = QListWidgetItem(self.ItemListView)\n",
-    "            label = QLabel(str(i+1)+ \") \" + item_list[i]['short_description'] + \"\\n\" + \"Uploaded By: \" + str(item_list[i]['uploaded_by']))\n",
+    "            label = QLabel(str(i+1)+ \") \" + item_list[i]['short_description'] + \"\\n\" + \"Uploaded By: \" + str(item_list[i]['uploaded_by']) + \"\\n\" +\"Rating: 3/5\" )\n",
     "            label.setStyleSheet(\"height:fit-content;font-size:12pt;font-style: normal;font-weight:100;\");\n",
     "          #  label.setSizePolicy(QSizePolicy.Preferred, QSizePolicy.Minimum)\n",
     "            label.setWordWrap(True);\n",
