--- a/login-Copy1.ipynb
+++ b/login-Copy1.ipynb
@@ -42,7 +42,9 @@
     "\n",
     "# FOR SIGN OUT\n",
     "# curr_db_user = ds_db[\"curr_user\"]\n",
-    "# x = curr_db_user.remove({})\n"
+    "# x = curr_db_user.remove({})\n",
+    "\n",
+    "curr_db_user = ds_db[\"curr_user\"]\n"
    ]
   },
   {
