Muaaz part of DB done
Only save comment is remaining. Though please do QA of the database functionalities and consult with the comments.

--- a/login-Copy1.ipynb
+++ b/login-Copy1.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['_id', 'username', 'password']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-45-5d8c8f710682>, line 87)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-45-5d8c8f710682>\"\u001b[0;36m, line \u001b[0;32m87\u001b[0m\n\u001b[0;31m    z = requested_data.update({\"_id\" : r_id}, {'$update': {\"comments\".\"comment\": \"Hahahahha\", \"comments\".\"commented_by\":cu}, false, false})\u001b[0m\n\u001b[0m                                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -33,22 +33,85 @@
     "data_client = pymongo.MongoClient(\"mongodb://localhost/\")\n",
     "ds_db = data_client[\"dataseed_db\"]\n",
     "ds_user = ds_db[\"user\"]\n",
+    "requested_data = ds_db[\"requested_data\"]\n",
+    "deleted_request = ds_db[\"deleted_request\"]\n",
     "\n",
-    "# x = ds_user.insert_one({_id:123,\"fullname\":\"DataSeed User\",\"username\":\"ds\", \"password\":\"ds\"})\n",
-    "curr_user = ds_user.find_one()\n",
-    "list(curr_user)\n",
+    "# x = ds_user.insert_one({\"fullname\":\"DataSeed User\",\"username\":\"ds\", \"password\":\"ds\"})\n",
+    "# y = ds_user.insert_one({\"username\":\"a\", \"password\":\"a\", \"phone\" : \"+923302042409\", \"email\": \"123@gmail.com\", \"full_name\" : \"Soman Zaqai\", \"address\" : \"House 12345 Modely Karachi Pakistan\", \"category\": \"Researcher\", \"organization\":\"Micro\", \"security_question\":\"Kia?\", \"security_answer\":\"Kia\", \"search_history\":[{}]})\n",
+    "# curr_user = ds_user.find_one({})\n",
+    "# list(curr_user)\n",
     "# print(curr_user['username'])\n",
     "# print(curr_user['password'])\n",
     "\n",
     "# FOR SIGN OUT\n",
     "# curr_db_user = ds_db[\"curr_user\"]\n",
-    "# x = curr_db_user.remove({})\n"
+    "# x = curr_db_user.remove({})\n",
+    "\n",
+    "curr_db_user = ds_db[\"curr_user\"]\n",
+    "cu = curr_db_user.find_one({})[\"_id\"]\n",
+    "# y = curr_db_user.insert({\"_id\": curr_user[\"_id\"]})\n",
+    "\n",
+    "ds_datasets = ds_db[\"dataset\"]\n",
+    "dss = list(ds_datasets.find({}))\n",
+    "\n",
+    "# PURCHASED DATASETS\n",
+    "# for i in dss:\n",
+    "#     if (i[\"bought_by\"]==cu):\n",
+    "#         print(i)\n",
+    "#         pass\n",
+    "# print(dss)\n",
+    "\n",
+    "# UPDATING SEARCH HISTORY OF CURRENT USER\n",
+    "# y = ds_user.update({\"username\":\"a\"},{\"$set\": {\"search_history\":['shark', 'cuttlefish', 'squid', 'mantis shrimp', 'anemone']}})\n",
+    "\n",
+    "# SEARCH HISTORY OF A USER\n",
+    "# mydic_list1= ds_user.find_one({\"username\":\"a\"}, {\"search_history\":1,\"_id\":0})[\"search_history\"]\n",
+    "# print(mydic_list1)\n",
+    "\n",
+    "# Access list of requests of a user\n",
+    "individual_requests = list(requested_data.find({\"requested_by\":cu}))\n",
+    "# print(individual_requests)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Access comments of a request\n",
+    "# It will bring comments of all requests requested by data. Must have an Object ID of a request to fetch only those comments\n",
+    "comments_of_requests = list(requested_data.find({\"requested_by\":cu}, {\"_id\":0, \"comments\":1}))\n",
+    "# print(comments_of_request)\n",
+    "\n",
+    "r_id = requested_data.find_one({})[\"_id\"]\n",
+    "comments_of_request = requested_data.find_one({\"_id\":r_id}, {\"_id\":0, \"comments\":1})[\"comments\"]\n",
+    "print(cu)\n",
+    "print(comments_of_request)\n",
+    "\n",
+    "for k in comments_of_request:\n",
+    "    print(k[\"comment\"])\n",
+    "    print(\"Commented by: \", k[\"commented_by\"])\n",
+    "    print(ds_user.find_one({\"_id\": cu})[\"username\"])\n",
+    "    \n",
+    "# Access single request\n",
+    "# print(requested_data.find_one({\"_id\": individual_requests[1][\"_id\"]}))\n",
+    "\n",
+    "request = requested_data.find_one({\"_id\": r_id})\n",
+    "print(request['description'])\n",
+    "\n",
+    "# x = requested_data.update({\"_id\": request[\"_id\"]}, {'$set': {\"status\":\"Fulfilled\"}})\n",
+    "\n",
+    "# y = deleted_request.insert(request)\n",
+    "# x = requested_data.remove({\"_id\": request[\"_id\"]})\n",
+    "\n",
+    "# Number of comments of request\n",
+    "len(request[\"comments\"])\n",
+    "\n",
+    "# z = requested_data.insert({\"_id\" : r_id}, \"comments\".\"comment\": \"Hahahahha\", \"comments\".\"commented_by\":cu}, false, false})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "SystemExit",
@@ -74,6 +137,7 @@
     "class Ui_Login(object):\n",
     "    def setupUi(self, Login):\n",
     "        Login.setObjectName(\"Login\")\n",
+    "\n",
     "        Login.resize(400, 300)\n",
     "        self.centralWidget = QtWidgets.QWidget(Login)\n",
     "        self.centralWidget.setObjectName(\"centralWidget\")\n",
@@ -167,8 +231,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -182,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
